--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.1.1",
     "mysql2": "^3.16.0",
     "next": "16.0.10",
     "react": "19.2.0",
